<resources>
    <string name="app_name">Horoscope</string>
    <string name="startup_message">Fill in your data</string>
    <string name="preferences_message">Choose your preferences</string>
    <string name="surname">Surname…</string>
    <string name="name">Name…</string>
    <string name="description">Description…</string>
    <string name="zodiac_sign_message">Pick your zodiac sign</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="preference1">Career &amp; Professional Growth</string>
    <string name="preference2">Health &amp; Wellness</string>
    <string name="preference3">Finance &amp; Wealth</string>
    <string name="preference4">Personal Development &amp; Spiritual Growth</string>
    <string name="preference5">Family &amp; Home Life</string>
    <string name="preference6">Friendships &amp; Social Life</string>
    <string name="preference7">Education &amp; Learning Opportunities</string>
    <string name="preference8">Travel &amp; Adventure</string>
    <string name="preference9">Creativity &amp; Hobbies</string>
    <string name="aquarius">Aquarius</string>
    <string name="aries">Aries</string>
    <string name="cancer">Cancer</string>
    <string name="capricorn">Capricorn</string>
    <string name="gemini">Gemini</string>
    <string name="leo">Leo</string>
    <string name="libra">Libra</string>
    <string name="pisces">Pisces</string>
    <string name="sagittarius">Sagittarius</string>
    <string name="scorpio">Scorpio</string>
    <string name="taurus">Taurus</string>
    <string name="virgo">Virgo</string>
</resources>

