<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper_2"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/startup_message"
        android:textColor="#CCFFFFFF"
        android:fontFamily="@font/medievalsharp_bold"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTxtName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTxtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:autofillHints=""
        android:inputType="textPersonName"
        android:width="300dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/name"
        android:padding="5dp"
        android:textAlignment="textStart"
        android:textColor="#80FFFFFF"
        android:textColorHint="#80FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/editTxtSurname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editTxtSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:inputType="textPersonName"
        android:width="300dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/surname"
        android:padding="5dp"
        android:textAlignment="textStart"
        android:textColor="#80FFFFFF"
        android:textColorHint="#80FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtName" />

    <EditText
        android:id="@+id/editTxtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_edittext"
        android:width="300dp"
        android:height="200dp"
        android:gravity="top|start"
        android:hint="@string/description"
        android:lines="5"
        android:padding="5dp"
        android:textAlignment="textStart"
        android:textColor="#80FFFFFF"
        android:textColorHint="#80FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/guideline_h"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtSurname" />

    <Button
        android:id="@+id/startup_next_btn"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:text="@string/next"
        android:background="@drawable/round_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_v"
        app:layout_constraintTop_toTopOf="@+id/guideline_h"
        android:textSize="16sp"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="256dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="628dp" />

</androidx.constraintlayout.widget.ConstraintLayout>